--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: splash
-author_profile: false
+permalink: /
+header:
+  overlay_color: "#5e616c"
+  overlay_image: /images/projects/home.jpeg
+excerpt: A collection of personal projects on data science analytics around topics that I find interest.
 ---
