--- a/index.html
+++ b/index.html
@@ -5,4 +5,17 @@ header:
   overlay_color: "#5e616c"
   overlay_image: /images/projects/home.jpeg
 excerpt: A collection of personal projects on data science analytics around topics that I find interest.
+feature_row:
+  - image_path: /images/projects/michelin.png
+    title: "Web Scraping the Michelin Guide"
+    url: "/portfolio/Web_Scraping_Michelin_Guide/"
+    btn_class: "btn--primary"
+    btn_label: "Learn more"
+  - image_path: /images/projects/reddit.png
+    title: "The Front Page of Reddit"
+    url: "/portfolio/reddit_api/"
+    btn_class: "btn--primary"
+    btn_label: "Learn more"
 ---
+
+{% include feature_row %}
