--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ permalink: /
 header:
   overlay_color: "#5e616c"
   overlay_image: /images/projects/home.jpeg
-excerpt: A collection of personal projects on data science analytics around topics that I find interest.
+excerpt: A collection of personal projects on data science analytics around topics that I find interesting.
 ---
